--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
       <h2 class="generalTitle">Skills</h2>
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-
           <p>
             <img src="resources/solidity.svg" class="icon">
             <img src="resources/theGraph.png"" class="icon">
@@ -107,6 +106,7 @@
 
       <h2 class="generalTitle">Experience: Things I reported to a boss for</h2>
 
+      <!--ChainBytes--> 
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
@@ -125,17 +125,17 @@
                 <a href="https://github.com/JossDuff/ChainBytes">Repository</a>
                 - Check out the beautiful readme :)
               </li>
-              <li>Undergraduate capstone project mentored by Eric Grill, ChainBytes CEO and blockchain advisor to the President of El Salvador to verify fair
+              <li>Undergradute capstone project mentored by Eric Grill, ChainBytes CEO and blockchain advisor to the President of El Salvador to verify fair
                 payment of wages to coffee laborers in El Salvador.</li>
               <li>Designed, developed, tested, and deployed Solidity smart contract on an Ethereum Goerli testnet and a subgraph on theGraph network.</li>
               <li>Maintained team’s Hardhat repo for smart contract and subgraph development.</li>
               <li>WON best overall capstone project out of 30+ projects at Lehigh’s 2022 computer science capstone fair.</li>
-              <li>Experienced a fluid and exploratory development environment that involved lots of problem solving.</li>
             </ul>
           </div>
         </div>
       </div>
 
+      <!--FLOAT-->  
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
@@ -160,6 +160,8 @@
         </div>
       </div>
 
+      <!--NHI--> 
+      <!--
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
@@ -178,6 +180,7 @@
           </div>
         </div>
       </div>
+
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
@@ -192,15 +195,42 @@
           </div>
         </div>
       </div>
+      -->
+
 
       <h2 class="generalTitle">Projects: Things I worked on outside of class</h2>
      
+      <!--SemiSwap--> 
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Smart Contract Developer</p>
+            <p class="companyTitle">SemiSwap</p>
+            <p class="date">September 2022 - December 2022</p>
+            <p>
+              <img src="resources/solidity.svg" class="icon">
+              <img src="resources/hardhat.png" class="icon">
+            </p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Designed, wrote, and thoroughly tested an ERC-20 to Ether Automatic Market Maker DEX to be used as the reference solution for the
+                Blockchain Algorithms and Systems class I graded for.
+              </li>
+              <li>Wrote up an assignment description based on the reference solution I made to give my students a challenging but rewarding assignment.</li>
+              <li>This project is being used in future classes, so the repository is private but I can show upon request.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!--algo crowdfund--> 
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
             <p class="role">Decentralized App Developer</p>
             <p class="companyTitle"><a href="https://www.algorand.com/">Algorand</a></p>
-            <p class="date">January 2022 - Present</p>
+            <p class="date">January 2022 - May 2022</p>
             <p>
               <img src="resources/reach.svg" class="icon">
             </p>
@@ -223,23 +253,29 @@
         </div>
       </div>
 
+      <!--Joss Token--> 
       <div class="container-fluid p-3 mb-5 bg-white rounded shadow">
         <div class="row p-3">
           <div class="col-lg-4 vertical">
-            <p class="role">Solidity Developer</p>
+            <p class="role">Smart Contract Developer</p>
             <p class="companyTitle">JossToken</p>
-            <p class="date">September 2021 - December 2021</p>
+            <p class="date">September 2021</p>
+            <p>
+              <img src="resources/solidity.svg" class="icon">
+              <img src="resources/hardhat.png" class="icon">
+            </p>
           </div>
           <div class="col-md">
             <ul class="noMargin">
-              <li>Learned Solidity best practices to develop an ERC-20 token with unique token mechanics.</li>
+              <li>My first foray into smart contract development :)</li>
+              <li>Learned Solidity best practices to develop an ERC-20 token.</li>
               <li>Deployed contract using Hardhat environment.</li>
-              <li>Implemented Ethers.js library to interact with the smart contract at jossduff.com.</li>
               <li><a href="https://rinkeby.etherscan.io/address/0x39D2bd02704B9E876e769Bf4C0964019623A5ee3#code">
                 Contract on Etherscan</a></li>
             </ul>
           </div>
         </div>
+        <!--
           <div class="row p-3">
             <div class="col-lg-1 center">
               <button onClick="connectWallet()">Connect Wallet</button>
@@ -255,26 +291,56 @@
               <button onClick="fetchMessage()">Fetch Message</button>
             </div>
           </div>
+        -->
       </div>
 
+      <h2 class="generalTitle">Assignments: Things I worked on for a grade</h2>
+
+      <!--Operating Systems--> 
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
-            <p class="role">Full Stack Developer</p>
-            <p class="companyTitle">Buzz</p>
+            <p class="role">Software Engineer</p>
+            <p class="companyTitle">Operating System Design: </p>
             <p class="date">September 2021 - December 2021</p>
+            <p>
+              <img src="resources/cpp.png" class = "icon">
+            </p>
           </div>
           <div class="col-md">
             <ul class="noMargin">
               <li>Worked with small team to develop message board application for software engineering class.</li>
               <li>Practiced agile development with two-week sprints and SCRUM management.</li>
               <li>Worked on the back end with Maven and Heroku, Android front end with Flutter, and as project manager.</li>
-              <li>Private repository.  Can show code upon request.</li>
             </ul>
           </div>
         </div>
       </div>
 
+      <!--Buzz--> 
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Full Stack Developer</p>
+            <p class="companyTitle">Software Engineering</p>
+            <p class="date">September 2021 - December 2021</p>
+            <p>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg" class="icon"/>
+              <img src="resources/flutter.png" class="icon"/>
+            </p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Worked with small team to develop message board application for software engineering class.</li>
+              <li>Practiced agile development with two-week sprints and SCRUM management.</li>
+              <li>Worked on the back end with Maven and Heroku, Android front end with Flutter, and as project manager.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    <!--jossduff.com-->
+    <!--
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
@@ -292,15 +358,55 @@
           </div>
         </div>
       </div>
+    -->
 
       <h2 class="generalTitle">Organizations</h2>
 
+      <!--SSS-->
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Member, Researcher</p>
+            <p class="companyTitle"><a href="https://wordpress.lehigh.edu/sss/">Scalable Systems and Software 
+              Research Group</a>, Lehigh University</p>
+            <p class="date">January 2021 - Present</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Attended weekly presentations advanced blockchain topics.</li>
+              <li>Shared and discussed blockchain technology news with professors and graduate students.</li>
+              <li>Researching the viability of implementing a hierarchical consensus mechanism for central bank digital currencies.</li>
+              <li>Reading and understanding published research papers in the database, distributed system, and parallel computing fields.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!--Grader-->
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Grader, Course Designer, Lecturer</p>
+            <p class="companyTitle">Blockchain Algorithms and Systems</p>
+            <p class="date">August 2022 - December 2022</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Designed, wrote, and tested class Solidity Automatic Market Maker project (see projects: SemiSwap).</li>
+              <li>Gave a lecture on comparison of EVM and AVM as well as smart contract languages Solidity, Vyper, Yul, Reach, PyTeal, and TEAL.</li>
+              <li>Graded assignments of 60+ students.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!--LCC-->
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
             <p class="role">President</p>
             <p class="companyTitle">Lehigh Cryptocurrency Club</p>
-            <p class="date">October 2021 - Present</p>
+            <p class="date">October 2021 - May 2022</p>
           </div>
           <div class="col-md">
             <ul class="noMargin">
@@ -312,25 +418,6 @@
           </div>
         </div>
       </div>
-
-      <div class="container-fluid p-3 mb-5 bg-white rounded">
-        <div class="row shadow p-3">
-          <div class="col-lg-4 vertical">
-            <p class="role">Member</p>
-            <p class="companyTitle"><a href="https://wordpress.lehigh.edu/sss/">Scalable Systems and Software 
-              Research Group, Lehigh University</a></p>
-            <p class="date">January 2021 - Present</p>
-          </div>
-          <div class="col-md">
-            <ul class="noMargin">
-              <li>Attended weekly presentations advanced blockchain topics.</li>
-              <li>Shared and discussed blockchain technology news with professors and graduate students<./li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-
 
     </div>
 
