Annual clean up almost done

--- a/index.html
+++ b/index.html
@@ -32,18 +32,22 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg">
           <h1 class="myName">jossduff.com</h1>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4"></div>
         <div class="col-lg-4">
             <p class="intro">
-              Hi!  Welcome to my page.  I need to update it with my current projects so for now I'm using it as a hub for all my links.
+              Hi!
               <br><br>
               I'm a Senior at
               <a href="https://www1.lehigh.edu/">
               Lehigh University</a> pursuing a
               <a href="http://catalog.lehigh.edu/coursesprogramsandcurricula/interdisciplinaryundergraduatestudy/computerscienceandbusinessprogram/#text">
               B.S. in Computer Science and Business</a>.  I love learning about anything relating to blockchain technology.  You can reach me at jod323@lehigh.edu.
+              <br>
               <br>
               <a href="https://github.com/JossDuff/">github</a>
               <a href="https://www.linkedin.com/in/joss-duff-305670200/">linkedin</a>
@@ -301,17 +305,41 @@
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
             <p class="role">Software Engineer</p>
-            <p class="companyTitle">Operating System Design: </p>
-            <p class="date">September 2021 - December 2021</p>
+            <p class="companyTitle">Class: Operating System Design</p>
+            <p class="date">September 2022 - December 2022</p>
             <p>
               <img src="resources/cpp.png" class = "icon">
             </p>
           </div>
           <div class="col-md">
             <ul class="noMargin">
-              <li>Worked with small team to develop message board application for software engineering class.</li>
-              <li>Practiced agile development with two-week sprints and SCRUM management.</li>
-              <li>Worked on the back end with Maven and Heroku, Android front end with Flutter, and as project manager.</li>
+              <li>Created a client/server key value store.</li>
+              <li>Implemented RSA/AES encrypted communication between client and server.</li>
+              <li>Authenticated each connecting client with a username and password and enforced individual client data quotas.</li>
+              <li>Scaled the application to use multiple threads, safely.</li>
+              <li>Can share code upon request.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!--Database-->
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Backend Developer</p>
+            <p class="companyTitle">Class: Database Systems and Applications</p>
+            <p class="date">September 2021 - December 2021</p>
+            <p>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg" class="icon"/>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" class="icon"/>  
+            </p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li><a href="https://github.com/JossDuff/cse241">Repository</a></li>
+              <li>Designed and created a database based on assignment description.</li>
+              <li>Created an API and a command line interface for interacting with the database.</li>
             </ul>
           </div>
         </div>
@@ -322,7 +350,7 @@
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
             <p class="role">Full Stack Developer</p>
-            <p class="companyTitle">Software Engineering</p>
+            <p class="companyTitle">Class: Software Engineering</p>
             <p class="date">September 2021 - December 2021</p>
             <p>
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg" class="icon"/>
@@ -421,8 +449,8 @@
 
     </div>
 
-    <div class="container-fluid center">
+    <!-- <div class="container-fluid center">
       <button onclick="topFunction()">Take me to the top</button>
-    </div>
+    </div> -->
   </body>
 </html>
