Added semiswap public repo

--- a/index.html
+++ b/index.html
@@ -218,11 +218,17 @@
           </div>
           <div class="col-md">
             <ul class="noMargin">
+              <li>
+                <a href="https://github.com/JossDuff/cse242-fall2022-public/">Repository</a>
+              </li>
+              <li>
+                <a href="resources/assignment.pdf">Assignment hand out</a>
+              </li>
               <li>Designed, wrote, and thoroughly tested an ERC-20 to Ether Automatic Market Maker DEX to be used as the reference solution for the
                 Blockchain Algorithms and Systems class I graded for.
               </li>
               <li>Wrote up an assignment description based on the reference solution I made to give my students a challenging but rewarding assignment.</li>
-              <li>This project is being used in future classes, so the repository is private but I can show upon request.</li>
+              <li>This project is being used in future classes, so the solution .sol is private but I can show upon request.</li>
             </ul>
           </div>
         </div>
