had to slip in the honors

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p class="intro">
           Hi!
           <br><br>
-          I graduated from
+          I graduated with honors from
           <a href="https://www1.lehigh.edu/">
             Lehigh University</a> this May with a B.S. in
           <a
