--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <br><br>
           I graduated with honors from
           <a href="https://www1.lehigh.edu/">
-            Lehigh University</a> this May with a B.S. in
+            Lehigh University</a> in 2023 with a B.S. in
           <a
             href="http://catalog.lehigh.edu/coursesprogramsandcurricula/interdisciplinaryundergraduatestudy/computerscienceandbusinessprogram/#text">
             Computer Science and Business</a>. I love learning about anything relating to blockchain technology.
