--- a/index.html
+++ b/index.html
@@ -30,17 +30,19 @@
             Lehigh University</a> in 2023 with a B.S. in
           <a
             href="http://catalog.lehigh.edu/coursesprogramsandcurricula/interdisciplinaryundergraduatestudy/computerscienceandbusinessprogram/#text">
-            Computer Science and Business</a>. I love learning about anything relating to blockchain technology.
+            Computer Science and Business</a>. <br><br>
+		  I love learning about anything relating to blockchain technology.<br><br>
+		  Currently I'm pursuing a M.S. in Computer Science at Lehigh focusing on proving regulatory compliance while maintaining privacy. 
+		  <br><br>
           You can reach me at jduff360@gmail.com.
           <br>
           <br>
-          Currently I'm doing a lot of reading and learning Rust :)
           <br>
           <br>
           <a href="https://github.com/JossDuff/">github</a>
           <a href="https://www.linkedin.com/in/joss-duff-305670200/">linkedin</a>
-          <a href="resources/Joss_Duff_Resume.pdf">resume</a>
-          <a href="https://twitter.com/Copernicrypto">twitter</a>
+          <a href="resources/Joss-Duff-Resume.pdf">resume</a>
+          <a href="https://x.com/joddoss">twitter</a>
         </p>
       </div>
     </div>
